feat: Refactor CameraActivity to use ActivityResultLauncher for image preview
- Replaced deprecated startActivityForResult with ActivityResultLauncher in CameraActivity.
- Extracted output file options creation into a separate method for better readability.
- Added new ImagePreviewActivity to confirm or retake the captured image.
- Updated layout for CameraActivity to improve UI design.

feat: Enhance ImagePreviewActivity for image confirmation and retake functionality

- Implemented image preview functionality with options to confirm or retake the photo.
- Added buttons for retaking and confirming the image with appropriate actions.

feat: Update MainActivity layout and integrate system window insets

- Adjusted MainActivity to fit system windows for better UI compatibility.

feat: Introduce AppConstants for managing slot times and WiFi validation

- Added SLOT_TIMES map to manage class slot timings.
- Introduced constants for enabling smart WiFi validation and testing mode.

style: Create drawable resources for buttons and icons

- Added custom drawable resources for attendance button and capture button.
- Created icons for logout and WiFi status with appropriate colors.

fix: Update layout files for improved UI and accessibility

- Modified activity_camera.xml and activity_image_preview.xml for better layout structure.
- Enhanced fragment_attendance.xml with scrollable content and fixed logout button.

chore: Update color and string resources for better maintainability

- Added new color definitions for attendance-related UI elements.
- Expanded string resources for accessibility and user guidance.

chore: Update dependencies in libs.versions.toml

- Updated Glide and Firebase In-App Messaging dependencies for improved functionality.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,20 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!-- Required for getting SSID on newer Android versions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- For Android 15+ - Additional location permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" android:minSdkVersion="29" />
+
+    <!-- Network state permissions -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
+    <!-- For Android 13+ (API 33+) - Needed for notification permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" android:minSdkVersion="33" />
 
     <application
         android:allowBackup="true"
@@ -44,7 +54,10 @@
 
         <activity
             android:name=".ui.main.CameraActivity"
-            android:screenOrientation="portrait"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.main.ImagePreviewActivity"
             android:exported="false" />
 
        </application>
